fixed file name preview overflow

--- a/src/front/cobalt.css
+++ b/src/front/cobalt.css
@@ -926,6 +926,9 @@ button:active,
     color: var(--accent-subtext);
     font-size: 0.8rem;
 }
+.filename-container {
+    overflow-wrap: anywhere;
+}
 /* rounded corners */
 #bottom #paste,
 #footer .switch,
